--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
 .App {
+  background: #f1f1f1;
   text-align: center;
+  height: 100%;
+  display: grid;
+  grid-template-rows: auto auto auto auto;
+}
+
+.App-image {
+  width: 100%;
+  height: 100%;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  text-align: center;
+  font-style: italic;
+  position: absolute;
+  font-size: 40px;
+  top: 0;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  font-family: "New Tegomin";
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-line {
+  margin-left: 5%;
+  margin-right: 5%;
 }
